src/test/deca/context/valid/methods/test_debug_5.deca
class A {
  void m() { }
}
{
  int x = 1;
  A a = new A();
  a.m();
  println(x);
}
