src/test/deca/context/invalid/avecObjet/write_to_unknown_field.deca
// Description :
//    Affectation vers un champ inexistant.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 14 : Le membre z n'existe pas dans A

class A {
    int x;
}

{
    A a = new A();
    a.z = 3;
}

